Add window.parent.postMessage('nextLevel') to validationChallenge3 function

--- a/level-1/public/index.html
+++ b/level-1/public/index.html
@@ -13,7 +13,7 @@
     <title>Hack the Vault</title>
   </head>
   <body>
-    <p hidden>Hello Hacker! You found the alarm code. Use it to disable the vault's protection and find the missing spaceship part! The alarm code is: ALIENS_ROCK!! </p>
+    <p hidden>Hello Hacker! You found the alarm code. Use it to disable the vault's protection and find the missing spaceship piece! The alarm code is: ALIENS_ROCK!! </p>
     <div id="root"></div>
   </body>
 </html>
