added jonas last button

--- a/level-4/index.html
+++ b/level-4/index.html
@@ -59,7 +59,7 @@
 				<h1>3/3</h1>
 				<img src="assets/gas-tank.png" class="gasTank"></img>
 				<h4> You found the missing piece, the fuel for your spaceship! Now get out of my forrest!! </h4>
-				<button class="popup-button" onclick="closeFinalPopup()">Next Level</button>
+				<button class="popup-button" onclick="window.parent.postMessage('nextLevel')">Next Level</button>
 				<p class="escInfo">(Press esc to be able to click)</p>
 			</div>
 		</div>
