adam update of level2

--- a/level-2/index.html
+++ b/level-2/index.html
@@ -26,9 +26,15 @@
           
           <p>Congratulations on hacking the vault and moving to the next level. Now it's time to find your lost radio.</p>     
           <p> Without it, you will be 'bored starless' for the rest of eternity.</p>
-          <P>Sadly on the crash landing the radio fell into outer space and you need to locate it and bring it back to you.</P>
+          <P>Sadly on the crash landing the radio floated off into outer space. You need to locate it and bring it back to you and your spaceship.</P>
           <p>You only have 1 minute to complete the task before your radio dissapears forever into the unkown abyss</p>
           <p>Use your browser to move onto 'level-1'</p>
+          <br><br>
+          <br><br>
+          <p>in case you missed the clue...</p>
+          <p>Use your browser to move to</p>
+          <p>'level-1'</p>
+          <p>And I hope you washed your hands this morning. The world is COVID crazy!</p>
         </div>
 
         
