--- a/level-2/level-1.html
+++ b/level-2/level-1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -22,7 +22,7 @@
 
 
 
-<body onload="alertUser('Are you ready for your level-1 challenge? Use your mouse pointer to locate the lost radio. You have 1 minute to find it, or be bored for the rest of eternity')">
+<body onload="alertUser('Are you ready for your first challenge? Use your mouse pointer to locate the lost radio that is floating around in outer space. You have 1 minute to find it, or be bored for the rest of eternity')">
     <div class="div-1">
         <button onclick="myFunction()"class="button-1">button-1</button>
 
@@ -30,20 +30,15 @@
     </div>  
 
     <div class="div-2">
-        <!-- <a href="https://lifelong.eco/" class="link-2">this is link</a> -->
         <button onclick="myFunction3()" class="button-3">button-3</button>
     </div>
 
     <div class="div-3">
-        <button onclick="location.href='/level-2.html';" class="radioButton">click me</button>
-
-
-        
+        <button onclick="location.href='/level-2.html';" class="radioButton">click me</button>   
     </div>
 
     <div class="div-4">
         <button onclick="myFunction4()"class="button-4">button-4</button>
-        <!-- <a href="https://lifelong.eco/" class="link-4">this is link</a> -->
         <button onclick="myFunction5()" class="button-5">button-5</button>
         <button onclick="myFunction6()" class="button-6">button-6</button>
     </div>
